fix(admin): null value for deleted user reference object in comments

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -239,8 +239,14 @@
                                 <div class="comment-card-header d-flex align-items-center justify-content-between">
                                   <div class="comment-metadata d-flex ">
                                     <div class="metadata-content d-flex">
-                                      <img src="https://avatar.iran.liara.run/username?username=<%=comment.commentAuthor.username%>" class="rounded-circle" width="40" height="40">
-                                      <span class="fw-bold mx-2"><%=comment.commentAuthor.username%></span><span class="text-muted"><%=dateConversion(comment.createdAt.toISOString().substring(0,10))%> at <%=comment.createdAt.toISOString().substring(11,16)%> </span>
+                                      <%// checking whether user exists%>
+                                      <%if(comment.commentAuthor) {%>
+                                        <img src="https://avatar.iran.liara.run/username?username=<%=comment.commentAuthor.username%>" class="rounded-circle" width="40" height="40">
+                                        <span class="fw-bold mx-2"><%=comment.commentAuthor.username%></span><span class="text-muted"><%=dateConversion(comment.createdAt.toISOString().substring(0,10))%> at <%=comment.createdAt.toISOString().substring(11,16)%> </span>
+                                      <%} else {%>
+                                        <img src="https://avatar.iran.liara.run/username?username=d" class="rounded-circle" width="40" height="40">
+                                        <span class="fw-bold fst-italic mx-2">Deleted User</span><span class="text-muted"><%=dateConversion(comment.createdAt.toISOString().substring(0,10))%> at <%=comment.createdAt.toISOString().substring(11,16)%> </span>  
+                                      <%}%>
                                     </div>
                                   </div>
                                   <div class="comment-delete-button d-flex align-items-center">
