--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -141,7 +141,7 @@
                                                     <span class="fw-bold mx-2"><%=comment.commentAuthor.username%></span><span class="text-muted"><%=dateConversion(comment.createdAt.toISOString().substring(0,10))%> at <%=comment.createdAt.toISOString().substring(11,16)%> </span>
                                                 </div>
                                              <%} else {%>  <%// when user does not exist%>
-                                                <img src="https://avatar.iran.liara.run/username?username=d" class="rounded-circle" width="40" height="40">
+                                                <img src="/images/no_profile_picture_placeholder.png" class="rounded-circle" width="40" height="40">
                                                 <div class="d-flex align-items-center justify-content-start">
                                                     <span class="fw-bold fst-italic mx-2">deleted user</span><span class="text-muted"><%=dateConversion(comment.createdAt.toISOString().substring(0,10))%> at <%=comment.createdAt.toISOString().substring(11,16)%> </span>
                                                 </div>
