--- a/views/otpPage_user.ejs
+++ b/views/otpPage_user.ejs
@@ -44,7 +44,8 @@
               <h4 class="text-center mb-2 text-primary">Verify OTP</h4>
               
               <hr>
-              <label class="form-label mb-5">We have sent an OTP to <span class="fw-bold"><%=email%></span>, check your mail box.</label>
+              <label class="form-label mb-2">We have sent an OTP to <span class="fw-bold"><%=email%></span>, check your mail box.</label>
+              <label class="form-label mb-5">Reminder: This OTP will only be valid for the next <span class="fw-bold">2 minutes</span></label>
               
               <%// OTP entering form%>
               <form action="/register/otpCheck" method="post">
