--- a/views/usersListPage_admin.ejs
+++ b/views/usersListPage_admin.ejs
@@ -33,9 +33,21 @@
       return dateInDMY;
     }%>
 
-    <%if(userInfo.length > 0){%>
+    <%if(data.message.length > 0) {%>
 
-      
+      <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" >
+          <div class="toast-body bg-success bg-gradient text-white">
+            <%=data.message%>
+          </div>
+        </div>
+      </div>
+
+  <%}%>
+
+
+    <%if(data.users.length > 0){%>
+
         <!-- User Information Template -->
         <div class="container my-5">
         
@@ -52,7 +64,7 @@
                 </tr>
               </thead>
 
-              <%userInfo.forEach(function(user){%>
+              <%data.users.forEach(function(user){%>
 
                 <tbody class="user-table">
                   <tr>
@@ -62,8 +74,11 @@
                     <td><span class="badge bg-success">Active</span></td>
                     <td><%=dateConversion(user.createdAt.toISOString().substring(0,10))%></td>
                     <td>
-                      <button class="btn btn-sm btn-primary">Restrict</button>
-                      <button class="btn btn-sm btn-danger">Delete</button>
+                      <form action="/admin/deleteUser?_method=DELETE" method="post">
+                        <input type="text" class="d-none" value="<%=user.username%>" name="username">
+                        <button class="btn btn-sm btn-primary">Restrict</button>
+                        <button class="btn btn-sm btn-danger" type="submit">Delete</button>
+                      </form>
                     </td>
                   </tr>
                 </tbody>
@@ -104,6 +119,21 @@
 
   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  // initializing BS Toast component
+  document.addEventListener('DOMContentLoaded', function() {
+    var toastElement = document.getElementById('liveToast');
+    if (toastElement) {
+      var toast = new bootstrap.Toast(toastElement); // Calling BS toast function
+      toast.show(); 
+
+      // Hide toast after 3 seconds 
+      setTimeout(function() {
+        toast.hide();
+      }, 3000);
+    }
+  });
+</script>
 
 </body>
   
