feat(ui): add proper flash messages for all user actions

--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -92,16 +92,26 @@
 
 <body>
 
-    <%if(message.length > 0){%>
-
-        <div class="toast-container position-fixed bottom-0 end-0 p-3">
-            <div id="liveToast" class="toast" role="alert" >
-              <div class="toast-body bg-success bg-gradient text-white">
-                <%= message %>
-              </div>
+    <% // For success flash messages %>
+    <%if(flashMessages.success && flashMessages.success.length > 0) {%>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3 ">
+          <div id="liveToast" class="toast" role="alert" >
+            <div class="toast-body bg-success bg-gradient text-white">
+              <%=flashMessages.success%>
             </div>
+          </div>
         </div>
+    <%}%>
 
+    <% // For faluire flash messages %>
+    <%if(flashMessages.failure && flashMessages.failure.length > 0) {%>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3 ">
+          <div id="liveToast" class="toast" role="alert" >
+            <div class="toast-body bg-danger bg-gradient text-white">
+              <%=flashMessages.failure%>
+            </div>
+          </div>
+        </div>
     <%}%>
 
 
