--- a/views/editBlogPage.ejs
+++ b/views/editBlogPage.ejs
@@ -39,6 +39,28 @@
 
     <hr>
 
+    <% // For faluire flash messages %>
+    <%if(flashMessages.failure && flashMessages.failure.length > 0) {%>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+          <div id="liveToast" class="toast" role="alert" >
+            <div class="toast-body bg-danger bg-gradient text-white">
+             <%=flashMessages.failure%>
+            </div>
+          </div>
+        </div>
+    <%}%>
+
+    <% //  for warning/info flash messages%>
+    <%if(flashMessages.info && flashMessages.info.length > 0) {%>
+      <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" >
+          <div class="toast-body bg-warning bg-gradient text-white">
+           <%=flashMessages.info%>
+          </div>
+        </div>
+      </div>
+    <%}%>   
+
     <div class="container form-container my-5">
         <div class="row justify-content-center">
           <div class="col-md-8 col-lg-6">
@@ -69,7 +91,23 @@
       </div>
 
     <%- include('partials/_footer')%>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script>
+      // initializing BS Toast component
+      document.addEventListener('DOMContentLoaded', function() {
+      var toastElement = document.getElementById('liveToast');
+      if (toastElement) {
+        var toast = new bootstrap.Toast(toastElement); // Calling BS toast function
+        toast.show(); 
+
+       // Hide toast after 3 seconds 
+        setTimeout(function() {
+          toast.hide();
+        }, 3000);
+       }
+      });
+    </script>
 
 </body>
 </html>
