--- a/views/registrationPage.ejs
+++ b/views/registrationPage.ejs
@@ -98,6 +98,28 @@
 
 <body>
 
+    <% // For success flash messages %>
+    <%if(flashMessages.success && flashMessages.success.length > 0) {%>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+          <div id="liveToast" class="toast" role="alert" >
+            <div class="toast-body bg-success bg-gradient text-white">
+              <%=flashMessages.success%>
+            </div>
+          </div>
+        </div>
+    <%}%>
+
+    <% // For faluire flash messages %>
+    <%if(flashMessages.failure && flashMessages.failure.length > 0) {%>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+          <div id="liveToast" class="toast" role="alert" >
+            <div class="toast-body bg-danger bg-gradient text-white">
+              <%=flashMessages.failure%>
+            </div>
+          </div>
+        </div>
+    <%}%>
+
     <!-- Split Screen Layout -->
     <div class="split-screen">
         <!-- Left Side: Logo/Text -->
@@ -137,6 +159,21 @@
     <!-- Bootstrap JS cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script>
+        // initializing BS Toast component
+        document.addEventListener('DOMContentLoaded', function() {
+        var toastElement = document.getElementById('liveToast');
+        if (toastElement) {
+          var toast = new bootstrap.Toast(toastElement); // Calling BS toast function
+          toast.show(); 
+        
+          // Hide toast after 3 seconds 
+          setTimeout(function() {
+            toast.hide();
+          }, 3000);
+         }
+        });
+    </script>
 
 </body>
 
