fix(view): rephrase empty comment box message

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -267,7 +267,7 @@
 
                       <%}else{%>
 
-                          <p class="text-muted fst-italic">No comments yet. Be the first to comment!</p>
+                          <p class="text-muted fst-italic">No comments yet. </p>
                           
                       <%}%>
 
