style(flash message): change font weight to semibold

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -101,7 +101,7 @@
     <%if(message.length > 0){%>
         <div class="toast-container position-fixed bottom-0 end-0 p-3">
             <div id="liveToast" class="toast" role="alert" >
-              <div class="toast-body bg-success bg-gradient text-white">
+              <div class="toast-body bg-success bg-gradient text-white fw-semibold">
                 <%=message%>
               </div>
             </div>
