--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -84,7 +84,7 @@
 
       <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div class="toast" id="liveToast" role="alert">
-          <div class="toast-body bg-success bg-gradient text-white">
+          <div class="toast-body bg-success bg-gradient text-white fw-semibold">
             <%= data.message %>
           </div>
         </div>
