--- a/views/usersListPage_admin.ejs
+++ b/views/usersListPage_admin.ejs
@@ -37,7 +37,7 @@
 
       <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div id="liveToast" class="toast" role="alert" >
-          <div class="toast-body bg-success bg-gradient text-white">
+          <div class="toast-body bg-success bg-gradient text-white fw-semibold">
             <%=data.message%>
           </div>
         </div>
