feat(ux): add proper flash message for admin pages

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -79,17 +79,16 @@
         }
     %>
 
-    <!-- Checking for flash messages -->
-    <%if(data.message.length > 0){%>
-
-      <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div class="toast" id="liveToast" role="alert">
-          <div class="toast-body bg-success bg-gradient text-white fw-semibold">
-            <%= data.message %>
+    <!-- flash messages -->
+    <% // For success flash messages %>
+    <%if(flashMessages.success && flashMessages.success.length > 0) {%>
+      <div class="toast-container position-fixed bottom-0 end-0 mx-4 my-2">
+          <div id="liveToast" class="toast p-0 my-2" role="alert" >
+            <div class="toast-body bg-success bg-gradient text-white fw-semibold ">
+              <%=flashMessages.success%>
+            </div>
           </div>
-        </div>
       </div>
-
     <%}%>
 
 
@@ -334,7 +333,6 @@
 
         // method to toggle comment section
         function toggleCommentSection(sectionId) {
-          console.log("Comment section clicked ******************** SECTION ID: ", sectionId)
             const commentSection = document.getElementById(sectionId)
             if(commentSection.style.display === 'none') {
               console.log("comment section is hidden")
