feat(ui): increase comment card border radius

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -234,7 +234,7 @@
                           <%blog.comments.forEach(function(comment){%>
 
                               <!-- Comment Card -->
-                              <div class="comment-card comment-box p-3 mb-2 rounded shadow-sm bg-light">
+                              <div class="comment-card comment-box p-3 mb-2 rounded-5 shadow-sm bg-light">
                                 <div class="comment-card-header d-flex align-items-center justify-content-between">
                                   <div class="comment-metadata d-flex ">
                                     <div class="metadata-content d-flex">
