--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -151,7 +151,7 @@
 
                                 <%blog.comments.forEach(function(comment){%>
 
-                                    <div class="comment-box p-3 mb-2 rounded shadow-sm bg-light">
+                                    <div class="comment-box p-3 mb-2 rounded-5 shadow-sm bg-light">
                                         <div class="d-flex align-items-center justify-content-start">
                                             <% // User Profile Picture %>
                                              <%if(comment.commentAuthor) {%> <%// checking whether user exitst (when reference object is not null)%>
