style(views): change bg color for blog creation and edit page

--- a/views/accountInfo_user.ejs
+++ b/views/accountInfo_user.ejs
@@ -5,7 +5,7 @@
 
 <style>
     body {
-      background-color: #f8f9fa;
+      background-color: #aeb3ba63;
     }
     .profile-card {
       border: none;
