--- a/views/createBlogPage.ejs
+++ b/views/createBlogPage.ejs
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #0d6efd; /* Light background */
+      background-color: #aeb3ba63; /* Light background */
     }
     .form-container {
       margin-top: 50px;
